--- a/tutorial/0-models-and-events.html
+++ b/tutorial/0-models-and-events.html
@@ -83,7 +83,7 @@ myTweet.on('change',
     console.log(e);
 
     // Write code to log the changed attribute:
-// window.alert(YOUR CODE HERE);
+ window.alert(myTweet.get('message'));
   }
 );
 
@@ -96,7 +96,7 @@ myTweet.on('change',
  * by the framework. Review these now (at http://backbonejs.org/#Model-set)
  * and write a one-liner that will make our `change` listener fire: */
 
-// myTweetYOUR CODE HERE;
+ myTweet.set('message','This is a new message');
 
 /* Once you have the `change` event firing, move on to rendering! */
   </script>
