--- a/tutorial/3-collections.html
+++ b/tutorial/3-collections.html
@@ -106,11 +106,12 @@ var CommentsView = Backbone.View.extend({
       '</span>'
     ].join('');
 
+    var template = _.template('<li><%=comment%></li>');
     this.$el.html(html);
     /* Render each model in the collection as a list item (<li>).
      * Remember, we have the underscore functions: */
     this.$el.find('ul').append(this.collection.map(function(comment) {
-      // YOUR CODE HERE
+      return template({comment: comment.get('message')});
     }));
 
     return this.$el;
@@ -134,7 +135,7 @@ var comments = new Comments(commentList);
 var commentsView = new CommentsView({ collection: comments });
 
 // Append it to the page (uncomment this when you are ready):
-// $('body').append(commentsView.render());
+$('body').append(commentsView.render());
     </script>
   </body>
 </html>
